--- a/APM/index.html
+++ b/APM/index.html
@@ -35,7 +35,9 @@
 </head>
 
 <body>
-    Starter files for Angular2: Getting Started.
+    <pm-app>
+        Loading App...
+    </pm-app>
 </body>
 
 </html>
